--- a/src/01-html-bug.html
+++ b/src/01-html-bug.html
@@ -1,15 +1,15 @@
 <html>
-<body>
-  <div>
-  <h1>Welcome to my page!</h1>
-  <p>Here you will find all sorts of interesting information</p>
-      </div>
-  <div>
-  <h2>About me 
-  </h2>
-      <p>I am a developer who loves to create websites and apps. 
-        I also enjoy playing video games and reading books 
+  <body>
+    <div>
+      <h1>Welcome to my page!</h1>
+      <p>Here you will find all sorts of interesting information</p>
+    </div>
+    <div>
+      <h2>About me</h2>
+      <p>I am a developer who loves to create websites and apps.
+        I also enjoy playing video games and reading books
         in my spare time.
-</div>
-</body>
+      </p>
+    </div>
+  </body>
 </html>
